# perpetuals-v1

./: .gitignore  .prettierignore  Anchor.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  scripts.sh  tasks.sh  test.sh  tsconfig.json
programs/faucet/: Cargo.toml
programs/faucet/src/: constants.rs  error.rs  lib.rs  state.rs
programs/faucet/src/instructions/: competition_claim.rs  competition_end.rs  competition_enter.rs  create.rs  mint.rs  mint_create.rs  mod.rs  oracle_add.rs  swap_buy.rs  swap_sell.rs
programs/faucet/tests/: faucet.test.ts
programs/perpetuals/: Cargo.toml
programs/perpetuals/src/: error.rs  events.rs  instructions.rs  lib.rs
programs/perpetuals/src/instructions/: add_collateral.rs  add_custody.rs  add_custody_init.rs  add_liquidity.rs  add_pool.rs  close_position.rs  force_close.rs  get_add_liquidity_amount_and_fee.rs  get_assets_under_management.rs  get_entry_price_and_fee.rs  get_exit_price_and_fee.rs  get_liquidation_price.rs  get_liquidation_state.rs  get_lp_token_price.rs  get_oracle_price.rs  get_pnl.rs  get_position.rs  get_remove_liquidity_amount_and_fee.rs  init.rs  liquidate.rs  open_position.rs  remove_collateral.rs  remove_custody.rs  remove_liquidity.rs  remove_pool.rs  set_custody_config.rs  set_custom_oracle_price.rs  set_custom_oracle_price_permissionless.rs  set_permissions.rs  update_pool_aum.rs  withdraw_fees.rs
programs/perpetuals/src/state/: custody.rs  multisig.rs  oracle.rs  perpetuals.rs  pool.rs  position.rs
programs/perpetuals/tests/: tests._rs
programs/perpetuals/tests/anchor/: basic.test.ts  basic.ts  test_client.ts
programs/perpetuals/tests/utils/: mod.rs  (+4 more)
(+168 files in other folders)
