[package]
name = "perpetuals"
version = "0.1.0"
description = "Solana Perpetuals Exchange"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/perpetuals"
categories = ["finance"]
keywords = ["solana", "dex", "perpetuals", "futures", "exchange"]
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perpetuals"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []


[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.16.9"
solana-security-txt = "1.1.1"
pyth-min = "=0.1.1"
ahash = "=0.7.8"
num-traits = "0.2.15"
num = "0.4.0"
bytemuck = "1.13.1"

[dev-dependencies]
solana-program-test = "1.16.9"
solana-sdk = "1.16.9"
tokio = { version = "1.0.0", features = ["macros"] }
bonfida-test-utils = "0.2.1"
bincode = "1.3.3"
maplit = "1.0.2"
